--- a/css/style.css
+++ b/css/style.css
@@ -88,13 +88,13 @@ body {
 .banner{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     margin: 1% 2%;
 }
 
 
  .banner__image{
-    margin: 0% 1% 0% 0%;  
+    margin: 0% 20% 5% 0%;  
 } 
  
 
@@ -110,14 +110,14 @@ body {
 
 .card__section{
     display: flex;
-    flex-direction: column-reverse;
-    width: 80%;
-    margin-left: 19%;
-    margin-right: 2%;
+    justify-content: space-between;
+    margin-left: 20%;
 }
 
 
 .ul__cards{
+    width: 70%;
+    height: 90%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -136,10 +136,10 @@ body {
 
 .card__image{
     width: 100%;
-    height: 80%;
+    height: 120%;
     display: flex;
     justify-items: center;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 10px 10px;
 } 
 
 .card__title{
