--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
     width: 30%;
     margin: 2% 3% 2% 2%;
     background-color: transparent;
-    border-color: var(--secondary-color);
+    border: var(--secondary-color);
     border-radius: 8px;
     color:var(--white);
 }
@@ -36,7 +36,7 @@ body {
     color: #a2a2a2;
     opacity: 1;
     font-size: 12px;
-    font-family: ''Roboto Condensed'', sans-serif; 
+    font-family: 'Roboto Condensed', sans-serif; 
     
 }
 
@@ -98,10 +98,8 @@ body {
 } 
  
 
-.gallery__text{
-    margin-top: 5%;
-    margin-bottom: 2%;
-    margin-left: 1%;
+.gallery__text {
+    margin: 5% 0 2% 1%;
     font-size: 18px;
     font-weight: 500;
     color: var(--secondary-color);
@@ -136,7 +134,7 @@ body {
 
 .card__image{
     width: 100%;
-    height: 120%;
+    height: 100%;
     display: flex;
     justify-items: center;
     border-radius: 10px 10px 10px 10px;
@@ -144,8 +142,7 @@ body {
 
 .card__title{
     font-size: 14px;
-    margin-left: 4%;
-    margin-top: 2%;
+    margin: 2% 0 0 4%;
     font-weight: 100;
 }
 
@@ -196,7 +193,7 @@ body {
 
  
 
-/* @media screen and (max-width: 851px){
+@media screen and (max-width: 851px){
 
     .header__logo{
         margin: 0.8rem;
@@ -316,4 +313,4 @@ body {
     ::placeholder{
         font-size: 12px;
     }
-} */
+}
